--- a/config.json
+++ b/config.json
@@ -19,8 +19,8 @@
     "BOTNAME": "ŠÛHÃŇ ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
+        "suhan.chaudhary.734805",
         "734805",
-        "",
         ""
     ],
     "NDH": [
